<resources>
    <string name="app_name">Kotlin 04</string>
    <string name="logintext">Please enter your login credentials.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginSignup">Not a member? Sign up now.</string>
    <string name="forgotPass">Reset Password</string>
    <string name="start">Click here to continue</string>
    <string name="signUpText">Please fill in the form below to create an account.</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="signup">Create Account</string>
    <string name="signupLogin">Already a member? Login now.</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="hello">Hello!</string>
    <string name="enterUserDetails">Please complete your user information to continue.</string>
    <string name="almostThere">Almost there!</string>
    <string name="fullName">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="tos">By continuing, you are agree with the Terms and Privacy Policy.</string>
    <string name="cont">Continue</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="changeImg">Change Image</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="notif">Notifications</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save Changes</string>
    <string name="gallery">Open Gallery</string>
    <string name="camera">Open Camera</string>
    <string name="editProfile">Edit your profile details here.</string>
    <string name="verified">You have verified your email.</string>
    <string name="unverified">Click here to verify your email.</string>
    <string name="phone">Phone Number</string>
    <string name="welcomeHome">Welcome,</string>
    <string name="userName">User!</string>
    <string name="editPass">Change Password</string>
    <string name="reenterPass">Please re-enter your password.</string>
    <string name="newEmail">Enter your new email address.</string>
    <string name="confirmEmail">Confirm Email</string>
    <string name="updateEmail">Update Email</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="newPass">Enter your new password.</string>
    <string name="newPassField">New Password</string>
    <string name="confirmNewPassField">Confirm New Password</string>
    <string name="forgot1">Forgot your password?</string>
    <string name="forgot2">Enter your email address to receive a password reset link.</string>
</resources>