<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/txtGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/gallery"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

            <TextView
                android:id="@+id/txtUnverified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/unverified"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <TextView
                android:id="@+id/txtVerified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/verified"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <View
                android:id="@+id/divider2"
                android:layout_width="3dp"
                android:layout_height="23dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

            <TextView
                android:id="@+id/txtCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/camera"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider2"
                app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittextbg"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPhone" />

            <EditText
                android:id="@+id/editFullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittextbg"
                android:ems="10"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/fullName"
                android:inputType="textCapWords"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtGallery" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittextbg"
                android:ems="10"
                android:fontFamily="@font/noto_sans"
                android:focusableInTouchMode="false"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editFullName" />

            <Button
                android:id="@+id/buttonSaveChanges"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="66dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/save"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <Button
                android:id="@+id/buttonChangePass"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/editPass"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSaveChanges" />

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/logout"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonChangePass" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgVerified"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="136dp"
                android:src="@drawable/ic_verified_blue"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
                app:layout_constraintStart_toStartOf="@+id/imgProfile"
                app:layout_constraintTop_toTopOf="@+id/imgProfile"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>